--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ clap = { version = "4", features = ["derive"] }
 idalib = "0.1"
 fugue-mptp = "0.3"
 regex = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 weggli-ruleset = "0.1"
+wegglix = "0.2"
 
 [build-dependencies]
 idalib-build = "0.1"
