--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ fugue-mptp = "0.3"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tabled = "0.16"
 weggli-ruleset = "0.1"
 wegglix = "0.2"
 
