--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ wegglix = "0.2"
 idalib-build = "0.1"
 
 [patch.crates-io]
-idalib = { path = "../idalib-brly/idalib" } #git = "ssh://github.com/binarly-io/idalib.git", branch = "feature/hexrays" }
-idalib-build = { path = "../idalib-brly/idalib-build" } #git = "ssh://github.com/binarly-io/idalib.git", branch = "feature/hexrays" }
+idalib = { git = "ssh://github.com/binarly-io/idalib.git", branch = "feature/hexrays" }
+idalib-build = { git = "ssh://github.com/binarly-io/idalib.git", branch = "feature/hexrays" }
