--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/xorpse/parascope.git"
 readme = "./README.md"
 edition = "2021"
 build = "build.rs"
+exclude = ["tests"]
 
 [dependencies]
 anyhow = "1"
